<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="test.testblankactivity.MainActivity">

    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/viewData"
        android:orderInCategory="100"
        android:title="@string/viewData"
        app:showAsAction="never" />
    <!--
        <item
            android:id="@+id/settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            app:showAsAction="never" />
    -->
        <item
            android:id="@+id/help"
            android:orderInCategory="100"
            android:title="@string/helpButton"
            app:showAsAction="never" />


    </menu>